Updated few things

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ DOMAIN=http://localhost:3000
 
 GOOGLE_YOUTUBE_API_KEY=AIzaSyCw7eEI4kSqQgIoq7fEwEiK6IQx3N3KL7E
 
-MONGO_URI=mongodb://127.0.0.1:27017/onlyus
+MONGO_URI=mongodb+srv://shyam:shyam123@only-us.c9pgj.mongodb.net/onlyus
